Fixed cover page

--- a/0_cover/cover.tex
+++ b/0_cover/cover.tex
@@ -1,6 +1,6 @@
 % -- Titulo e Descricao ------------------------------------------------------
 \newcommand{\tittese}{%
-	\textsf{\bfseries\Large Meu Titulo Vem Aqui \\
+	\textsf{\bfseries\Large Síntese e Verificação de Requisitos de Performance Não-frágil Para Sistemas de Controle Discreto com Realimentação de Estados \\
 	\vspace{0.8ex}
         }}
 
@@ -67,7 +67,7 @@ Agosto de 2018
 \vspace*{2cm}
 \vspace*{\stretch{1}}
 
-Orientador: Prof. D.Sc. Eddie Batista de Lima Filho \\
+Orientador: Prof. Ph.D. Lucas Carvalho Cordeiro \\
 \end{center}
 
 %}
@@ -97,19 +97,23 @@ Orientador: Prof. D.Sc. Eddie Batista de Lima Filho \\
 Banca Examinadora
 \vspace{2em}
 
-Prof. D.Sc. Eddie Batista de Lima Filho -- Presidente e Orientador\\
-TP Vision
+%Prof. D.Sc. Eddie Batista de Lima Filho -- Presidente e Orientador\\
+%TP Vision
+%\vspace{2em}
+
+Prof. Ph.D. Lucas Carvalho Cordeiro -- Presidente e Orientador\\
+Escola de Ciência da Computação -- UoM
 \vspace{2em}
 
-Prof. Ph.D. Lucas Carvalho Cordeiro -- Co-orientador\\
-Escola de Ciência da Computação -- UoM
+Prof. D.Sc. Eddie Batista de Lima Filho -- Co-orientador\\
+TP Vision
 \vspace{2em}
 
 Prof. D.Sc. Raimundo da Silva Barreto \\
 Instituto de Computação -- UFAM
 \vspace{2em}
 
-Prof. D.Sc. Renan Landau \\
+Prof. D.Sc. Renan Landau Paiva de Medeiros \\
 Faculdade de Tecnologia -- UFAM
 \vspace{2em}
 
