--- a/0_cover/abstract.tex
+++ b/0_cover/abstract.tex
@@ -1,11 +1,11 @@
 \chapter*{Resumo}
 \thispagestyle{empty}
 
-Este trabalho descreve uma nova abordagem para localizar falhas em programas concorrentes, a qual é baseada em técnicas de verificação de modelos limitada e sequencialização. A principal novidade dessa abordagem é a ideia de reproduzir um comportamento defeituoso em uma versão sequencial do programa concorrente. De forma a apontar linhas defeituosas, analizam-se os contraexemplos gerados por um verificador de modelos para o programa sequencial instrumentado e procura-se um valor para uma variável de diagnóstico, o qual corresponde a linhas reais no programa original. Essa abordagem é útil para aperfeiçoar o processo de depuração para programas concorrentes, já que ela diz qual linha deve ser corrigida e quais valores levam a uma execução bem-sucedida. Essa abordagem foi implementada como uma transformação código-a-código de um programa concorrente para um não-determinístico sequencial, o qual é então usado como entrada para ferramentas de verificação existentes. Resultados experimentais mostram que a abordagem descrita é eficaz e é capaz de localizar falhas na maioria dos casos de teste utilizados, extraídos da suíte da {\it International Competition on Software Verification} $2015$.
+Neste trabalho descrevemos uma abordagem para realizar síntese em sistemas de controle discretos com realimentação de estados em cima de requisitos de performance a qual é baseada em técnicas de síntese indutiva guiada por contra-exemplo (CEGIS). Nessa abordagem verifica-se um requisito de performance (\textit{e.g.} tempo de acomodação e máxima ultrapassagem) em um determinado sistema de controle com o objetivo de saber se satisfaz ao valor desejado para esse requisito, caso não satisfaça, deve-se encontrar um sistema que satisfaça ao requisito desejado, e nesse caso, redefine-se o controlador do sistema. Para geração do controlador, utilizamos uma técnica de aprendizagem onde a cada iteração que a verificação do requisito não satisfaça, aprende-se que esse controlador não nos serve. Na verificação desses requisitos de performance em sistemas de controle discreto, consideramos a fragilidade (\textit{erro de quantização numérica, arredondamento, etc}) nos controladores utilizados. Essa abordagem é útil para auxiliar engenheiros de controle em seus projetos de sistemas de controle discreto, visto que essas fragilidades ocorrem durante a implementação em uma plataforma digital, e nesse caso, essa abordagem gera o sistema que satisfaz os requisitos desejados no projeto. Essa abordagem foi implementada utilizando o DSVerifier que é uma ferramenta que emprega verificação de modelo limitada (e ilimitada) baseada em, teorias de módulo de satisfatibilidade. Nossa abordagem foi avaliada em um conjunto de \textit{benchmarks} clássicos de sistemas de controle extraídas da literatura, bem como foi em \textit{benchmarks} específicos considerando diferentes autovalores. Os resultados experimentais mostram que a abordagem elaborada é eficaz para a síntese de requisitos de perfomance em sistemas de controles discreto com realimentação de estados, visto que considera problemas práticos de implementação (efeitos FWL), diferentemente de outros métodos que rotineiramente não consideram esses problemas.
 
 \vspace*{\stretch{1}}
 
-\noindent \textsf{Palavras-chave:} Verificação de Modelos, Localização de Falhas, Sequencialização, Depuração.
+\noindent \textsf{Palavras-chave:} Sistemas de controle, Verificação de Parametros de Performance, Sintese.
 %}
 
 \cleardoublepage
